docs/api/v/2024.2.3/ui/window.md
#![](../../../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2024.2.3`)  


---

## `luxe: ui/window` module

- [UIWindow](#uiwindow)   
- [UIWindowChange](#uiwindowchange)   

---

### UIWindow
`:::js import "luxe: ui/window" for UIWindow`
> no docs found

- [create](#UIWindow.create)(**ui_entity**: `Any`)
- [close](#UIWindow.close)(**control**: `Any`)
- [set_collapsed](#UIWindow.set_collapsed+2)(**control**: `Any`, **state**: `Any`)
- [get_collapsed](#UIWindow.get_collapsed)(**control**: `Any`)
- [set_text](#UIWindow.set_text+2)(**control**: `Any`, **text**: `Any`)
- [set_text_size](#UIWindow.set_text_size+2)(**control**: `Any`, **size**: `Any`)
- [set_text_color](#UIWindow.set_text_color+2)(**control**: `Any`, **color**: `Any`)
- [set_text_font](#UIWindow.set_text_font+2)(**control**: `Any`, **font**: `Any`)
- [set_title_size](#UIWindow.set_title_size+2)(**control**: `Any`, **size**: `Any`)
- [set_resizable](#UIWindow.set_resizable+2)(**control**: `Any`, **state**: `Any`)
- [set_bring_to_front](#UIWindow.set_bring_to_front+2)(**control**: `Any`, **state**: `Any`)
- [set_closable](#UIWindow.set_closable+2)(**control**: `Any`, **state**: `Any`)
- [set_collapsible](#UIWindow.set_collapsible+2)(**control**: `Any`, **state**: `Any`)
- [set_draggable](#UIWindow.set_draggable+2)(**control**: `Any`, **state**: `Any`)
- [get_resizable](#UIWindow.get_resizable)(**control**: `Any`)
- [get_bring_to_front](#UIWindow.get_bring_to_front)(**control**: `Any`)
- [get_closable](#UIWindow.get_closable)(**control**: `Any`)
- [get_collapsible](#UIWindow.get_collapsible)(**control**: `Any`)
- [get_draggable](#UIWindow.get_draggable)(**control**: `Any`)
- [set_outline](#UIWindow.set_outline+5)(**control**: `UIWindow`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
- [set_shadow](#UIWindow.set_shadow+5)(**control**: `UIWindow`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)

<hr/>
<endpoint module="luxe: ui/window" class="UIWindow" signature="create(ui_entity : Any)"></endpoint>
<signature id="UIWindow.create">UIWindow.create(**ui_entity**: `Any`)
<a class="headerlink" href="#UIWindow.create" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="close(control : Any)"></endpoint>
<signature id="UIWindow.close">UIWindow.close(**control**: `Any`)
<a class="headerlink" href="#UIWindow.close" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_collapsed(control : Any, state : Any)"></endpoint>
<signature id="UIWindow.set_collapsed+2">UIWindow.set_collapsed(**control**: `Any`, **state**: `Any`)
<a class="headerlink" href="#UIWindow.set_collapsed+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="get_collapsed(control : Any)"></endpoint>
<signature id="UIWindow.get_collapsed">UIWindow.get_collapsed(**control**: `Any`)
<a class="headerlink" href="#UIWindow.get_collapsed" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_text(control : Any, text : Any)"></endpoint>
<signature id="UIWindow.set_text+2">UIWindow.set_text(**control**: `Any`, **text**: `Any`)
<a class="headerlink" href="#UIWindow.set_text+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_text_size(control : Any, size : Any)"></endpoint>
<signature id="UIWindow.set_text_size+2">UIWindow.set_text_size(**control**: `Any`, **size**: `Any`)
<a class="headerlink" href="#UIWindow.set_text_size+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_text_color(control : Any, color : Any)"></endpoint>
<signature id="UIWindow.set_text_color+2">UIWindow.set_text_color(**control**: `Any`, **color**: `Any`)
<a class="headerlink" href="#UIWindow.set_text_color+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_text_font(control : Any, font : Any)"></endpoint>
<signature id="UIWindow.set_text_font+2">UIWindow.set_text_font(**control**: `Any`, **font**: `Any`)
<a class="headerlink" href="#UIWindow.set_text_font+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_title_size(control : Any, size : Any)"></endpoint>
<signature id="UIWindow.set_title_size+2">UIWindow.set_title_size(**control**: `Any`, **size**: `Any`)
<a class="headerlink" href="#UIWindow.set_title_size+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_resizable(control : Any, state : Any)"></endpoint>
<signature id="UIWindow.set_resizable+2">UIWindow.set_resizable(**control**: `Any`, **state**: `Any`)
<a class="headerlink" href="#UIWindow.set_resizable+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_bring_to_front(control : Any, state : Any)"></endpoint>
<signature id="UIWindow.set_bring_to_front+2">UIWindow.set_bring_to_front(**control**: `Any`, **state**: `Any`)
<a class="headerlink" href="#UIWindow.set_bring_to_front+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_closable(control : Any, state : Any)"></endpoint>
<signature id="UIWindow.set_closable+2">UIWindow.set_closable(**control**: `Any`, **state**: `Any`)
<a class="headerlink" href="#UIWindow.set_closable+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_collapsible(control : Any, state : Any)"></endpoint>
<signature id="UIWindow.set_collapsible+2">UIWindow.set_collapsible(**control**: `Any`, **state**: `Any`)
<a class="headerlink" href="#UIWindow.set_collapsible+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_draggable(control : Any, state : Any)"></endpoint>
<signature id="UIWindow.set_draggable+2">UIWindow.set_draggable(**control**: `Any`, **state**: `Any`)
<a class="headerlink" href="#UIWindow.set_draggable+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="get_resizable(control : Any)"></endpoint>
<signature id="UIWindow.get_resizable">UIWindow.get_resizable(**control**: `Any`)
<a class="headerlink" href="#UIWindow.get_resizable" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="get_bring_to_front(control : Any)"></endpoint>
<signature id="UIWindow.get_bring_to_front">UIWindow.get_bring_to_front(**control**: `Any`)
<a class="headerlink" href="#UIWindow.get_bring_to_front" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="get_closable(control : Any)"></endpoint>
<signature id="UIWindow.get_closable">UIWindow.get_closable(**control**: `Any`)
<a class="headerlink" href="#UIWindow.get_closable" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="get_collapsible(control : Any)"></endpoint>
<signature id="UIWindow.get_collapsible">UIWindow.get_collapsible(**control**: `Any`)
<a class="headerlink" href="#UIWindow.get_collapsible" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="get_draggable(control : Any)"></endpoint>
<signature id="UIWindow.get_draggable">UIWindow.get_draggable(**control**: `Any`)
<a class="headerlink" href="#UIWindow.get_draggable" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_outline(control : UIWindow, radius : Num, softness : Num, color : Color, offset : Float2)"></endpoint>
<signature id="UIWindow.set_outline+5">UIWindow.set_outline(**control**: `UIWindow`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
<a class="headerlink" href="#UIWindow.set_outline+5" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> Set the text outline parameters.   

<endpoint module="luxe: ui/window" class="UIWindow" signature="set_shadow(control : UIWindow, radius : Num, softness : Num, color : Color, offset : Float2)"></endpoint>
<signature id="UIWindow.set_shadow+5">UIWindow.set_shadow(**control**: `UIWindow`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
<a class="headerlink" href="#UIWindow.set_shadow+5" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> Set the text shadow parameters.   

### UIWindowChange
`:::js import "luxe: ui/window" for UIWindowChange`
> no docs found

- [close](#UIWindowChange.close)
- [open](#UIWindowChange.open)
- [collapse](#UIWindowChange.collapse)
- [uncollapse](#UIWindowChange.uncollapse)
- [move](#UIWindowChange.move)
- [name](#UIWindowChange.name)(**value**: `Any`)

<hr/>
<endpoint module="luxe: ui/window" class="UIWindowChange" signature="close"></endpoint>
<signature id="UIWindowChange.close">UIWindowChange.close
<a class="headerlink" href="#UIWindowChange.close" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindowChange" signature="open"></endpoint>
<signature id="UIWindowChange.open">UIWindowChange.open
<a class="headerlink" href="#UIWindowChange.open" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindowChange" signature="collapse"></endpoint>
<signature id="UIWindowChange.collapse">UIWindowChange.collapse
<a class="headerlink" href="#UIWindowChange.collapse" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindowChange" signature="uncollapse"></endpoint>
<signature id="UIWindowChange.uncollapse">UIWindowChange.uncollapse
<a class="headerlink" href="#UIWindowChange.uncollapse" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindowChange" signature="move"></endpoint>
<signature id="UIWindowChange.move">UIWindowChange.move
<a class="headerlink" href="#UIWindowChange.move" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/window" class="UIWindowChange" signature="name(value : Any)"></endpoint>
<signature id="UIWindowChange.name">UIWindowChange.name(**value**: `Any`)
<a class="headerlink" href="#UIWindowChange.name" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

